Fix bug with canvas image stretch

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
 }
 
 #canvas {
-    outline: 1px solid black;
+    border: 1px solid black;
 }
 
 #content {
